style(layout): add scrollbar-gutter: stable; to prevent layout shift on scroll

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -19,6 +19,7 @@ html {
   color-scheme: dark;
   scrollbar-width: thin;
   scrollbar-color: #495670 var(--website-bg);
+  scrollbar-gutter: stable;
 }
 
 body {
